@@ -2,6 +2,7 @@ Revision history for DBIx::Class
 
 0.06001
         - Added fix for quoting with single table
+        - Added fix for update on resultset
 
 0.06000
         - Lots of documentation improvements
